--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "uretral/laradev",
+  "name": "uretral/ses-team",
   "type": "project",
   "description": "The Laravel Framework with custom admin panel",
   "keywords": [
